Update to Minor Issues Found (#2)
* Fix links in light theme being unreadable

* Minor Changes to Buttons and Light Theme

* Make Filtered Notification's Smaller

* fix borders on /publish

--- a/mastodon_aurora.css
+++ b/mastodon_aurora.css
@@ -168,7 +168,8 @@ body.lighter {
     color: #FCFCFC;
 }
 
-.theme-default .muted .status__content p, .status__content a {
+.theme-default .muted .status__content p, 
+.theme-default .status__content a {
     color: #FCFCFC !important;
     opacity: 0.75;
 }
@@ -214,7 +215,7 @@ body.lighter {
     background: #02111B;
 }
 
-.theme-default .compose-panel .compose-form__autosuggest-wrapper {
+.theme-default .compose-panel .compose-form__autosuggest-wrapper { 
     border-width: 1px;
     border-style: solid;
     border-color: #7974FE;
@@ -224,6 +225,20 @@ body.lighter {
 .theme-default .compose-form .autosuggest-textarea__textarea {
     background-color: #02111B !important;
     color: rgb(240, 240, 240);
+    border-width: 1px;
+    border-style: solid;
+    border-color: #7974FE;
+    background-color: #02111B;
+    border-bottom: hidden;
+}
+
+.compose-form .compose-form__modifiers .compose-form__uploads-wrapper {
+    border-style: solid;
+    border-color: #7974FE;
+    background-color: #02111B;
+    border-bottom: hidden;
+    border-top: hidden;
+    border-width: 1px;
 }
 
 .theme-default html {
@@ -262,6 +277,11 @@ body.lighter {
     background: #eff3f5;
 }
 
+.theme-mastodon-light .muted .status__content p, 
+.theme-mastodon-light .status__content a {
+    color:  #0d0c0c !important; 
+    opacity: 0.75;
+}
 
 /***********************************
 * UNIVERSAL 
@@ -467,6 +487,12 @@ a.column-link {
     opacity: 0.65;
 }
 
+/* Make Filtered Notification's Smaller */
+
+.status__wrapper--filtered {
+    font-size: 14px;
+    padding: 5px;
+}
 
 /* BUTTON: Publish -> Toot */
 
@@ -507,9 +533,11 @@ a.column-link {
 .button {
     background: #6364ff !important;
     opacity: 0.85;
+    color: #fff;
 }
 
 .button:hover {
     background: #6364ff;
     opacity: 1;
+    color: #fff;
 }
